// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeCard > should render 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="border-theme-primary-100 bg-theme-background transition-colors-shadow focus-visible:border-theme-primary-400 dark:border-theme-secondary-800 dim:border-theme-dim-700 dim:focus-visible:border-theme-dim-navy-600 relative h-full w-full cursor-pointer rounded-lg border-2 p-5 text-left outline-hidden duration-200 focus-visible:outline-hidden"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col items-center gap-3 md:flex-row"
        >
          <div
            class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
          >
            <img
              alt="ChangeNOW Logo"
              class="h-full w-full object-cover"
              src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="truncate text-sm font-semibold md:text-lg link"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ExchangeCard > should render when the exchange is not active 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="border-theme-primary-100 bg-theme-background transition-colors-shadow focus-visible:border-theme-primary-400 dark:border-theme-secondary-800 dim:border-theme-dim-700 dim:focus-visible:border-theme-dim-navy-600 relative h-full w-full cursor-pointer rounded-lg border-2 p-5 text-left outline-hidden duration-200 focus-visible:outline-hidden"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col items-center gap-3 md:flex-row"
        >
          <div
            class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
          >
            <img
              alt="ChangeNOW Logo"
              class="h-full w-full object-cover"
              src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="truncate text-sm font-semibold md:text-lg text-theme-primary-100 dark:text-theme-secondary-800"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;
